--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.38"
+lalrpop-util = "0.19.5"
 logos = "0.12.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
+regex = "1.4.3"
+
+[build-dependencies]
+lalrpop = "0.19.5"
