--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.38"
+inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm11-0"] }
 lalrpop-util = "0.19.5"
 logos = "0.12.0"
 pest = "2.1.3"
