--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm11-0"]
 lalrpop-util = "0.19.5"
 logos = "0.12.0"
 regex = "1.4.3"
+string-interner = "0.12.2"
 
 [build-dependencies]
 lalrpop = "0.19.5"
