--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.40"
+clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
 either = "1.6.1"
 inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm11-0"] }
 lalrpop-util = "0.19.5"
-logos = "0.12.0"
 regex = "1.4.5"
 string-interner = "0.12.2"
 
